--- a/src/main/resources/qupath/ext/omero/gui/login/login_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/login/login_form.fxml
@@ -21,39 +21,38 @@
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                 </padding>
                 <Label text="%Login.LoginForm.createConnection" />
-            <VBox>
-               <children>
-                      <GridPane hgap="10.0">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                          <Label text="%Login.LoginForm.webServerUrl" />
-                          <TextField fx:id="url" promptText="%Login.LoginForm.webServerUrl" GridPane.columnIndex="1" />
-                          <CheckBox fx:id="publicUser" mnemonicParsing="false" text="%Login.LoginForm.logInPublicUser" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-                      </GridPane>
-                  <GridPane fx:id="usernamePassword" hgap="10.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <Label text="%Login.LoginForm.username" />
-                        <TextField fx:id="username" promptText="%Login.LoginForm.username" GridPane.columnIndex="1" />
-                        <Label text="%Login.LoginForm.password" GridPane.rowIndex="1" />
-                        <PasswordField fx:id="password" promptText="%Login.LoginForm.password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                     </children>
-                  </GridPane>
-               </children>
-            </VBox>
+                <VBox>
+                    <GridPane hgap="10.0">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        </rowConstraints>
+                        <Label text="%Login.LoginForm.webServerUrl"/>
+                        <TextField fx:id="url" promptText="%Login.LoginForm.webServerUrl" GridPane.columnIndex="1"/>
+                        <CheckBox fx:id="publicUser" mnemonicParsing="false" text="%Login.LoginForm.logInPublicUser"
+                                  GridPane.columnSpan="2147483647" GridPane.rowIndex="1"/>
+                    </GridPane>
+                    <GridPane fx:id="usernamePassword" hgap="10.0">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        </rowConstraints>
+                        <Label text="%Login.LoginForm.username"/>
+                        <TextField fx:id="username" promptText="%Login.LoginForm.username"
+                                   GridPane.columnIndex="1"/>
+                        <Label text="%Login.LoginForm.password" GridPane.rowIndex="1"/>
+                        <PasswordField fx:id="password" promptText="%Login.LoginForm.password"
+                                       GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                    </GridPane>
+                </VBox>
                 <Button mnemonicParsing="false" onAction="#onConnectClicked" text="%Login.LoginForm.connect" />
             </VBox>
         </Scene>
