--- a/src/main/resources/qupath/ext/omero/gui/browser/settings.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/settings.fxml
@@ -13,109 +13,99 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root title="%Browser.ServerBrowser.Settings.title" type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root title="%Browser.ServerBrowser.Settings.title" type="Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
         <Scene stylesheets="@../styles.css">
             <VBox>
                <VBox>
-                  <Label styleClass="title" text="%Browser.ServerBrowser.Settings.webAPI"/>
-                  <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                            minHeight="-Infinity" minWidth="-Infinity" vgap="10.0">
+                  <Label styleClass="title" text="%Browser.ServerBrowser.Settings.webAPI" />
+                  <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <padding>
-                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                      </padding>
-                     <Label layoutX="25.0" layoutY="25.0" maxHeight="1.7976931348623157E308"
-                            maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-                            text="%Browser.ServerBrowser.Settings.webAPIJpegQuality">
+                     <Label layoutX="25.0" layoutY="25.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" text="%Browser.ServerBrowser.Settings.webAPIJpegQuality">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.webAPIJpegQualityDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.webAPIJpegQualityDescription" />
                         </tooltip>
                      </Label>
                      <TextField fx:id="webJpegQuality" layoutX="564.0" layoutY="27.0" GridPane.columnIndex="1">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.webAPIJpegQualityDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.webAPIJpegQualityDescription" />
                         </tooltip>
                      </TextField>
                   </GridPane>
                </VBox>
                <VBox>
-                  <Label styleClass="title" text="%Browser.ServerBrowser.Settings.iceAPI"/>
-                  <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                            minHeight="-Infinity" minWidth="-Infinity" vgap="10.0">
+                  <Label styleClass="title" text="%Browser.ServerBrowser.Settings.iceAPI" />
+                  <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <padding>
-                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                      </padding>
                      <Label text="%Browser.ServerBrowser.Settings.iceAPIServerAddress">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerAddressDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerAddressDescription" />
                         </tooltip>
                      </Label>
                      <TextField fx:id="omeroAddress" GridPane.columnIndex="1">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerAddressDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerAddressDescription" />
                         </tooltip>
                      </TextField>
                      <Label text="%Browser.ServerBrowser.Settings.iceAPIServerPort" GridPane.rowIndex="1">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerPortDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerPortDescription" />
                         </tooltip>
                      </Label>
                      <TextField fx:id="omeroPort" GridPane.columnIndex="1" GridPane.rowIndex="1">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerPortDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerPortDescription" />
                         </tooltip>
                      </TextField>
                   </GridPane>
                </VBox>
                <VBox>
-                  <Label styleClass="title" text="%Browser.ServerBrowser.Settings.msPixelBufferAPI"/>
-                  <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                            minHeight="-Infinity" minWidth="-Infinity" vgap="10.0">
+                  <Label styleClass="title" text="%Browser.ServerBrowser.Settings.msPixelBufferAPI" />
+                  <GridPane hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <padding>
-                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                      </padding>
-                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                            minHeight="-Infinity" minWidth="-Infinity"
-                            text="%Browser.ServerBrowser.Settings.msPixelBufferAPIPort">
+                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" text="%Browser.ServerBrowser.Settings.msPixelBufferAPIPort">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription" />
                         </tooltip>
                      </Label>
                      <TextField fx:id="msPixelBufferAPIPort" GridPane.columnIndex="1">
                         <tooltip>
-                           <Tooltip text="%Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription"/>
+                           <Tooltip text="%Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription" />
                         </tooltip>
                      </TextField>
                   </GridPane>
                </VBox>
                <HBox alignment="CENTER_RIGHT" spacing="10.0">
-                  <Button mnemonicParsing="false" onAction="#onOKClicked" text="%Browser.ServerBrowser.Settings.ok"/>
-                  <Button mnemonicParsing="false" onAction="#onCancelClicked"
-                          text="%Browser.ServerBrowser.Settings.cancel"/>
-                  <Button mnemonicParsing="false" onAction="#onApplyClicked"
-                          text="%Browser.ServerBrowser.Settings.apply"/>
+                  <Button mnemonicParsing="false" onAction="#onOKClicked" text="%Browser.ServerBrowser.Settings.ok" />
+                  <Button mnemonicParsing="false" onAction="#onCancelClicked" text="%Browser.ServerBrowser.Settings.cancel" />
                </HBox>
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
