--- a/src/main/resources/qupath/ext/omero/gui/browser/advancedinformation/advanced_information.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/advancedinformation/advanced_information.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root height="800.0" type="Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
         <Scene stylesheets="@../../styles.css">
             <ScrollPane>
