--- a/src/main/resources/qupath/ext/omero/gui/connectionsmanager/connections_manager.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/connectionsmanager/connections_manager.fxml
@@ -11,15 +11,13 @@
     <scene>
         <Scene stylesheets="@../styles.css">
             <ScrollPane fitToHeight="true" fitToWidth="true">
-                <VBox fx:id="container" alignment="CENTER" spacing="10.0">
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </padding>
-                    <Label text="%ConnectionsManager.ConnectionManager.noClients">
+                <VBox alignment="CENTER">
+                    <Label fx:id="noClients" text="%ConnectionsManager.ConnectionManager.noClients">
                         <VBox.margin>
-                            <Insets/>
+                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </VBox.margin>
                     </Label>
+               <VBox fx:id="container" />
                 </VBox>
             </ScrollPane>
         </Scene>
