--- a/src/main/resources/qupath/ext/omero/gui/browser/settings.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/settings.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,7 +14,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
-<?import javafx.scene.control.TextField?>
 
 <fx:root title="%Browser.ServerBrowser.Settings.title" type="Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
@@ -53,6 +54,7 @@
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <padding>
                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
@@ -77,6 +79,16 @@
                            <Tooltip text="%Browser.ServerBrowser.Settings.iceAPIServerPortDescription" />
                         </tooltip>
                      </TextField>
+                  <Label text="%Browser.ServerBrowser.Settings.iceAPINumberParallelReaders" GridPane.rowIndex="2">
+                     <tooltip>
+                        <Tooltip text="%Browser.ServerBrowser.Settings.iceAPINumberParallelReadersDescription" />
+                     </tooltip>
+                  </Label>
+                  <Spinner fx:id="numberOfIceReaders" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <tooltip>
+                        <Tooltip text="%Browser.ServerBrowser.Settings.iceAPINumberParallelReadersDescription" />
+                     </tooltip>
+                  </Spinner>
                   </GridPane>
                </VBox>
                <VBox>
